maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not found: value removeIndication
			if (getIndication(i,j)==10000) removeIndication(i,j)
                                                       ^